fix blurryness and make light mode work

--- a/home/css/light.css
+++ b/home/css/light.css
@@ -74,3 +74,7 @@
 	background-color: #fafafa;
 	box-shadow: 0px 0px 28px rgba(53, 61, 85, 0.1);
 }
+
+.home__logo-lottie {
+    filter: invert(1);
+}
